Further styling improvements

--- a/index.html
+++ b/index.html
@@ -240,14 +240,43 @@
                 </div>
             </section>
             <section id="sec_teamoverview">
-                <div class="div-infocard" id="ts-overview">
-                    <div class="1col2row-large" id="tso-portfoliovalue">
-                        <h1>Total Portfolio Value</h1>
-                        <h2></h2>
+                <div class="div-two_cards">
+                    <div class="div-infocard div-infocard_half">
+                        <h1 class="div-infocard_title">Team Links</h1>
+                        <div class="div-teamboard_table">
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td class="td-imp td-team_link">Team Folder</td>
+                                        <td class="td-link">DBS</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="td-imp td-team_link">Vacation Planner</td>
+                                        <td class="td-link">DBS</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="td-imp td-team_link">Onboarding Package</td>
+                                        <td class="td-link">DBS</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="td-imp td-team_link">Link 4</td>
+                                        <td class="td-link">DBS</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="td-imp td-team_link">Link 5</td>
+                                        <td class="td-link">DBS</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
-                    <div class="1col2row-large" id="tso-pipelinevalue">
-                        <h1>Total Pipeline Value</h1>
-                        <h2></h2>
+                    <div class="div-infocard div-infocard_half">
+                        <h1 class="div-infocard_title">Upcoming Events</h1>
+                        <div class="div_teamboard_table">
+                            <table>
+                                <tbody id="tbody_team_upcomingevents"></tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </section>
